# opengl-framework

./: .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
assets/models/backpack/: backpack.mtl
assets/shaders/: fragment_shader.frag  skybox.frag  skybox.vert  vertex_shader.vert
src/: main.cpp
src/core/: camera.cpp  camera.h  engine.cpp  engine.h  scene.cpp  scene.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/io/: file_stream.cpp  file_stream.h
src/ogl/: ibo.h  mesh.cpp  mesh.h  model.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vertex.h
src/rendering/: fbo.cpp  fbo.h  ibo.cpp  model.cpp  skybox.cpp  skybox.h  vbo.h
src/scenes/: example.cpp  example.h
src/util/: logger.cpp  logger.h
